@@ -1,5 +1,6 @@
 package it.marcodemartino.yapga.common.encryption.asymmetric;
 
+import it.marcodemartino.yapga.common.encryption.symmetric.SymmetricEncryption;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -9,6 +10,8 @@ import java.security.*;
 
 public class AsymmetricKeyFileHandler implements IAsymmetricKeyFileHandler {
 
+    private static final String PUBLIC_KEY_FILE_NAME = "public_key.pem";
+    private static final String PRIVATE_KEY_FILE_NAME = "private_key.pem";
     private final Logger logger = LogManager.getLogger(AsymmetricKeyFileHandler.class);
     private final AsymmetricKeyConstructor keyConstructor;
 
@@ -17,10 +20,10 @@ public class AsymmetricKeyFileHandler implements IAsymmetricKeyFileHandler {
     }
 
     @Override
-    public KeyPair readKeyPair(String publicName, String privateName) {
+    public KeyPair readKeyPair(SymmetricEncryption symmetricEncryption) {
         try {
-            PublicKey publicKey = getPublicKey(publicName);
-            PrivateKey privateKey = getPrivateKey(privateName);
+            PublicKey publicKey = getPublicKey(symmetricEncryption);
+            PrivateKey privateKey = getPrivateKey(symmetricEncryption);
             return new KeyPair(publicKey, privateKey);
         } catch (IOException e) {
             return null;
@@ -28,24 +31,28 @@ public class AsymmetricKeyFileHandler implements IAsymmetricKeyFileHandler {
     }
 
     @Override
-    public void writeToFile(KeyPair keyPair, Path path) {
+    public void writeToFile(KeyPair keyPair, SymmetricEncryption symmetricEncryption) {
         String publicText = keyConstructor.publicKeyToString(keyPair.getPublic());
+        byte[] encryptedPublic = symmetricEncryption.encryptFromString(publicText);
         String privateText = keyConstructor.privateKeyToString(keyPair.getPrivate());
+        byte[] encryptedPrivate = symmetricEncryption.encryptFromString(privateText);
         try {
-            Files.writeString(Paths.get(path.toAbsolutePath().toString(), "public_key.pem"), publicText);
-            Files.writeString(Paths.get(path.toAbsolutePath().toString(), "private_key.pem"), privateText);
+            Files.write(Paths.get(PUBLIC_KEY_FILE_NAME), encryptedPublic);
+            Files.write(Paths.get(PRIVATE_KEY_FILE_NAME), encryptedPrivate);
         } catch (IOException e) {
             logger.error("There was an error writing the rsa keys to file", e);
         }
     }
 
-    private PublicKey getPublicKey(String publicName) throws IOException {
-        String fileContent = Files.readString(Paths.get(publicName));
-        return keyConstructor.constructPublicKeyFromString(fileContent);
+    private PublicKey getPublicKey(SymmetricEncryption symmetricEncryption) throws IOException {
+        byte[] fileContent = Files.readAllBytes(Paths.get(PUBLIC_KEY_FILE_NAME));
+        String decryptedContent = symmetricEncryption.decryptToString(fileContent);
+        return keyConstructor.constructPublicKeyFromString(decryptedContent);
     }
 
-    private PrivateKey getPrivateKey(String privateName) throws IOException {
-        String fileContent = Files.readString(Paths.get(privateName));
-        return keyConstructor.constructPrivateKeyFromString(fileContent);
+    private PrivateKey getPrivateKey(SymmetricEncryption symmetricEncryption) throws IOException {
+        byte[] fileContent = Files.readAllBytes(Paths.get(PRIVATE_KEY_FILE_NAME));
+        String decryptedContent = symmetricEncryption.decryptToString(fileContent);
+        return keyConstructor.constructPrivateKeyFromString(decryptedContent);
     }
 }
